--- a/dameGame/dameGame.cbp
+++ b/dameGame/dameGame.cbp
@@ -41,7 +41,15 @@
 			<Add option="-lmingw32 -lSDL2main -lSDL2 -mwindows" />
 			<Add directory="lib" />
 		</Linker>
+		<Unit filename="include/graphicRendering.h" />
+		<Unit filename="include/properties.h" />
+		<Unit filename="src/graphicRendering.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="src/main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/properties.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
